TEIV Update dependencies for jdk24 & to address vulnerabilites & housekeeping
Change-Id: I7ba0c4ae398e2fca15f6b0b4a213d96ce8fb2028
Issue-ID: SMO-198
Signed-off-by: JohnKeeney <john.keeney@est.tech>